K8s/Manifests/proxmox-serivce/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8006
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
- addresses:
  - ip: 192.168.0.244
  ports:
  - name: app
    port: 8006
    protocol: TCP
